--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "little-lemon-website",
   "version": "0.1.0",
+  "author": {
+    "name": "ithoangtan",
+    "email": "ithoangtan@gmail.com"
+  },
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +15,19 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "formik": "^2.4.3",
+    "framer-motion": "^10.16.2",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/runtime": "^7.22.11",
     "prettier": "^3.0.3"
   }
 }
